fix: z-index

--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -333,7 +333,7 @@ input {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 11;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -352,8 +352,6 @@ input {
   position: absolute;
   top: 0;
   width: 100%;
-  -webkit-transition: inherit;
-  transition: inherit;
 }
 .header__right {
   display: -webkit-box;
