--- a/static/src/scss/partials/header.scss
+++ b/static/src/scss/partials/header.scss
@@ -38,7 +38,6 @@
         gap: 20px
     }
 
-    transition: inherit;
 
     &--beforesticky {
         box-shadow: 0 3px 5px 1px #00000040;
