--- a/static/src/scss/partials/nav.scss
+++ b/static/src/scss/partials/nav.scss
@@ -66,7 +66,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 2;
+        z-index: 11;
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
